@@ -1,4 +1,4 @@
 <?php
 namespace Adminer;
 
-$VERSION = "5.0.3";
+$VERSION = "5.0.4-dev";
